--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,76 @@
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&family=Gentium+Plus&family=Kanit&family=Mulish:wght@200&family=Roboto+Condensed&display=swap" rel:"stylesheet");
-  
+
+@import url("https://fonts.googleapis.com");
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body{
-    font-family: 'Cormorant SC', serif;
-    margin: 0%;
+     background-image: url('bg.jpg');
+     background-size: cover;
+     background-repeat: no-repeat;
+     height:100vh ;
 }
 
-
-.nav-link{
-    text-decoration: none;
-    color: black;
-    
+.nav-home{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    /* background-color: #553c64; */
+    background-image: url('demo image.jpg');
+    font-family: 'Poppins', sans-serif;
+    border-bottom: 2px solid black;
 }
 
-.nav-name{
-   
-    font-size: 30px;
+.nav-blogs{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #553c644e;
+    /* background-image: url('demo image.jpg'); */
+    font-family: 'Poppins', sans-serif;
+    border-bottom: 2px solid black;
 }
 
+.nav-proj{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #553c644e;
+    /* background-image: url('demo image.jpg'); */
+    font-family: 'Poppins', sans-serif;
+    border-bottom: 2px solid black;
+}
 
+.logo{
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 20px;
+}
 
-.ul{
+.nav-links{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.nav-links li{
     list-style: none;
-    float: right;
-    padding-right: 5rem;
-
 }
 
-.nav-list{
-    display: inline;
-    padding-right: 2rem;
+.nav-links a{
+    /* color: white; */
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.active-link{
+    text-decoration:double ; 
 }
