--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@ body{
     border-bottom: 2px solid black;
 }
 
+.shadow{
+    box-shadow: -30px 30px 20px rgba(1,2,1,0.6);
+}
+
 .nav-proj{
     display: flex;
     justify-content: space-around;
@@ -49,7 +53,6 @@ body{
     font-family: 'Poppins', sans-serif;
     border: 2px solid black;
     border-radius: 1rem;
-    box-shadow: 5px 10px gray;
 }
 
 .logo{
